--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecipeApp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".FragmentPage"
+            android:name=".RecipePage"
             android:exported="false" />
         <activity
             android:name=".result_page"
